<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="60dp"
        android:text="@string/common_login"
        android:textColor="@color/colorWord"
        android:textSize="30sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="13dp"
            android:layout_height="18dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_phone_num" />

        <com.rainwood.tools.view.ClearEditText
            android:id="@+id/et_login_account"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/common_input_phone"
            android:inputType="phone"
            android:singleLine="true"
            app:regexType="mobile" />

    </LinearLayout>

    <View
        style="@style/HorizontalLineStyle"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="13dp"
            android:layout_height="18dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_lock_pwd" />

        <com.rainwood.tools.view.PasswordEditText
            android:id="@+id/et_login_password"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/common_input_pwd"
            android:maxLength="20"
            android:maxLines="1" />

    </LinearLayout>

    <View
        style="@style/HorizontalLineStyle"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_login_forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="15dp"
        android:text="@string/common_login_forget"
        android:textColor="@color/colorAccent"
        android:visibility="gone"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/tv_forget_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="30dp"
        android:text="忘记密码？"
        android:textColor="@color/green10"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_login_commit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/selector_button_3"
        android:paddingLeft="15dp"
        android:paddingTop="8dp"
        android:paddingRight="15dp"
        android:paddingBottom="8dp"
        android:text="@string/common_login"
        android:textColor="@color/white90"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="没有账号？"
            android:textColor="@color/textColor"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:autoLink="all"
            android:text="立即注册"
            android:textColor="@color/green10"
            android:textSize="13sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="85dp"
        android:gravity="center_vertical">

        <View
            android:layout_width="45dp"
            android:layout_height="1dp"
            android:background="@color/gray5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="其他登录方式"
            android:textColor="@color/fontGray"
            android:textSize="12sp" />

        <View
            android:layout_width="45dp"
            android:layout_height="1dp"
            android:background="@color/gray5" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp">

        <ImageView
            android:id="@+id/iv_wx_login"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_wechat" />

        <Space
            android:layout_width="60dp"
            android:layout_height="match_parent" />

        <ImageView
            android:id="@+id/iv_qq_login"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_qq" />

    </LinearLayout>

</LinearLayout>